# python_xid

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  setup.py  vid.py  vid_test.py
tests/: test_pyvid_verse.py
vid/: __init__.py  vid.py
